# qhld-tasks

./: .dockerignore  .env.sample  Dockerfile  Dockerfile-dev  pyproject.toml  requirements.txt  setup.py
tests/: conftest.py  fixtures_loader.py
tests/fixtures/: alerts.json  initiatives_alerts.json  initiatives_alerts_deduplication.json
tests/integration/: conftest.py  test_alerts.py  test_scanned.py  test_validate.py
tests/unit/: test_sentence.py  test_tagger.py
tipi_tasks/: alerts.py  config.py  scanned.py  sentence.py  validate.py
tipi_tasks/templates/: alert_qhld.html
