[project]
name = "qhld-tasks"
version = "1.1.0"
description = "QHLD Tasks"
requires-python = ">=3.12"
dependencies = [
    "qhld-data @ git+https://github.com/politicalwatch/qhld-data.git",
    "celery[redis]==5.6.3",
    "jinja2>=3.1.0",
    "regex==2026.5.9",
    "sparkpost==1.3.10",
]

[dependency-groups]
dev = ["ipdb==0.13.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tipi_tasks"]
