[project]
name = "qhld-tasks"
version = "2.0.0"
description = "QHLD Tasks"
requires-python = ">=3.12"
dependencies = [
    "qhld-data",
    "celery[redis]==5.6.3",
    "jinja2>=3.1.0",
    "regex==2026.5.9",
    "sparkpost==1.3.10",
]

[dependency-groups]
dev = ["ipdb==0.13.13"]

[tool.uv.sources]
qhld-data = { git = "https://github.com/politicalwatch/qhld-data.git", tag = "v2.0.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tipi_tasks"]
