[project]
name = "qhld-tasks"
version = "2.0.1"
description = "QHLD Tasks"
requires-python = ">=3.12"
dependencies = [
    "qhld-data",
    "celery[redis]==5.6.3",
    "jinja2>=3.1.0",
    "regex==2026.5.9",
    "sparkpost==1.3.10",
]

[dependency-groups]
dev = [
    "ipdb==0.13.13",
    "pytest==9.1.1",
    "testcontainers[mongodb]==4.14.2",
]

[tool.uv.sources]
# DEV (TFM speeches branch): qhld-data pinned to the paired
# `feat/parliamentary-speech-analysis` branch. Revert to a tag pin before merge.
qhld-data = { git = "https://github.com/politicalwatch/qhld-data.git", branch = "feat/parliamentary-speech-analysis" }

[tool.pytest.ini_options]
# Listed unit-first so the fast no-infra tests run before the container-backed ones.
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "unit: no-infra tests; run anywhere with no Mongo/Docker. Filter with `-m unit`.",
    "integration: need a throwaway Mongo (testcontainers); auto-skip when Docker is unavailable. Filter with `-m integration`.",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tipi_tasks"]
